--- a/app/src/main/res/layout/fragment_question.xml
+++ b/app/src/main/res/layout/fragment_question.xml
@@ -15,42 +15,26 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/questionTitle"
-            style="@style/gameTitleStyle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/dimen_10"
-            android:layout_marginBottom="@dimen/dimen_32"
-            android:gravity="start"
-            android:text="@{question.title}"
-            app:layout_constraintEnd_toStartOf="@id/progress_bar"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="Question title" />
-
-
-        <TextView
             style="@style/gameBodyStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/time"
             android:layout_marginEnd="@dimen/dimen_3"
+            android:text="@string/time"
             android:textSize="@dimen/text_16"
-            app:layout_constraintBottom_toTopOf="@id/progress_bar"
-            app:layout_constraintEnd_toEndOf="@id/progress_bar"
-            app:layout_constraintStart_toStartOf="@id/progress_bar" />
+            app:layout_constraintBottom_toTopOf="@id/progress"
+            app:layout_constraintEnd_toEndOf="@id/progress"
+            app:layout_constraintStart_toStartOf="@id/progress" />
 
         <ProgressBar
-            android:id="@+id/progress_bar"
+            android:id="@+id/progress"
             style="@style/CircularDeterminateProgressBar"
             android:layout_width="@dimen/dimen_50"
             android:layout_height="@dimen/dimen_50"
             android:layout_marginEnd="@dimen/dimen_3"
             android:max="10"
             android:progress="10"
-            app:layout_constraintBottom_toBottomOf="@id/questionTitle"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/questionTitle" />
+            app:layout_constraintBottom_toTopOf="@+id/cardView"
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <TextView
             android:id="@+id/progress_text"
@@ -61,23 +45,22 @@
             android:gravity="center"
             android:paddingHorizontal="@dimen/dimen_3"
             android:textSize="@dimen/text_16"
-            app:layout_constraintBottom_toBottomOf="@id/progress_bar"
-            app:layout_constraintEnd_toEndOf="@id/progress_bar"
-            app:layout_constraintStart_toStartOf="@id/progress_bar"
-            app:layout_constraintTop_toTopOf="@id/progress_bar"
+            app:layout_constraintBottom_toBottomOf="@id/progress"
+            app:layout_constraintEnd_toEndOf="@id/progress"
+            app:layout_constraintStart_toStartOf="@id/progress"
+            app:layout_constraintTop_toTopOf="@id/progress"
             tools:text="21" />
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
             android:layout_width="0dp"
             android:layout_height="200dp"
-            android:layout_marginTop="@dimen/dimen_20"
             app:cardBackgroundColor="@android:color/transparent"
             app:cardCornerRadius="@dimen/dimen_2"
             app:layout_constraintDimensionRatio="W, 16:9"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/questionTitle">
+            app:layout_constraintTop_toBottomOf="@id/progress">
 
             <ImageView
                 android:id="@+id/imageQuestion"
@@ -86,6 +69,21 @@
                 android:padding="@dimen/dimen_8"
                 android:scaleType="fitXY" />
         </androidx.cardview.widget.CardView>
+
+        <TextView
+            android:id="@+id/questionTitle"
+            style="@style/gameTitleStyle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/dimen_10"
+            android:layout_marginTop="@dimen/dimen_20"
+            android:layout_marginBottom="@dimen/dimen_32"
+            android:gravity="start"
+            android:text="@{question.title}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cardView"
+            tools:text="Question title" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/answersRecyclerView"
@@ -96,7 +94,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cardView"
+            app:layout_constraintTop_toBottomOf="@+id/questionTitle"
             app:layout_constraintVertical_bias="0"
             tools:listitem="@layout/item_answer" />
 
