--- a/app/src/main/res/layout/dialog_navigation.xml
+++ b/app/src/main/res/layout/dialog_navigation.xml
@@ -7,6 +7,9 @@
         <variable
             name="config"
             type="com.etsisi.appquitectura.presentation.dialog.model.DialogConfig" />
+        <variable
+            name="buttonsListener"
+            type="com.etsisi.appquitectura.presentation.common.DialogListener" />
     </data>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -27,7 +30,7 @@
             android:scaleType="centerInside"
             app:lottie_autoPlay="true"
             app:lottie_loop="true"
-            app:lottie_rawRes="@raw/lottie_404" />
+            app:customRawRes="@{config.lottieRes}" />
 
         <androidx.appcompat.widget.AppCompatTextView
             style="@style/dialog_title"
@@ -38,6 +41,24 @@
             style="@style/dialog_body"
             app:textRes="@{config.body}"
             tools:text="BODY" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <androidx.appcompat.widget.AppCompatButton
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="Aceptar"
+                android:onClick="@{() -> buttonsListener.onPositiveButtonClicked()}"/>
+            <androidx.appcompat.widget.AppCompatButton
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="Cancelar"
+                android:onClick="@{() -> buttonsListener.onNegativeButtonClicked()}" />
+        </LinearLayout>
 
     </LinearLayout>
 </layout>
