--- a/app/src/main/res/layout/item_tab_header.xml
+++ b/app/src/main/res/layout/item_tab_header.xml
@@ -5,7 +5,7 @@
 
     <data>
         <variable
-            name="currentTabPosition"
+            name="questionIndex"
             type="int" />
         <variable
             name="viewModel"
@@ -24,7 +24,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:isVisible="@{viewModel.currentTabIndex == currentTabPosition}"
+            app:isVisible="@{viewModel.currentTabIndex == questionIndex}"
             app:lottie_autoPlay="true"
             app:lottie_loop="true"
             app:lottie_rawRes="@raw/lottie_circle" />
@@ -38,7 +38,7 @@
             android:textColor="@color/black"
             android:textSize="@dimen/text_20"
             android:textStyle="bold"
-            android:text="@{Integer.toString(currentTabPosition)}"
+            android:text="@{Integer.toString(questionIndex)}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
