--- a/app/src/main/res/layout/fragment_question.xml
+++ b/app/src/main/res/layout/fragment_question.xml
@@ -15,13 +15,14 @@
         android:layout_height="match_parent">
 
         <TextView
+            android:id="@+id/timeLabel"
             style="@style/gameBodyStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/dimen_3"
             android:text="@string/time"
             android:textSize="@dimen/text_16"
-            app:layout_constraintBottom_toTopOf="@id/progress"
+            app:layout_constraintTop_toTopOf="@id/cardView"
             app:layout_constraintEnd_toEndOf="@id/progress"
             app:layout_constraintStart_toStartOf="@id/progress" />
 
@@ -33,8 +34,8 @@
             android:layout_marginEnd="@dimen/dimen_3"
             android:max="10"
             android:progress="10"
-            app:layout_constraintBottom_toTopOf="@+id/cardView"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/timeLabel"
+            app:layout_constraintEnd_toEndOf="@id/cardView" />
 
         <TextView
             android:id="@+id/progress_text"
@@ -56,18 +57,19 @@
             android:layout_width="0dp"
             android:layout_height="200dp"
             app:cardBackgroundColor="@android:color/transparent"
+            android:layout_marginTop="@dimen/dimen_10"
             app:cardCornerRadius="@dimen/dimen_2"
             app:layout_constraintDimensionRatio="W, 16:9"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/progress">
+            app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
                 android:id="@+id/imageQuestion"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:padding="@dimen/dimen_8"
-                android:scaleType="fitXY" />
+                android:scaleType="fitCenter" />
         </androidx.cardview.widget.CardView>
 
         <TextView
