--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -9,6 +9,7 @@
         <variable
             name="viewModel"
             type="com.etsisi.appquitectura.presentation.ui.main.game.viewmodel.ResultViewModel" />
+
         <import type="com.etsisi.appquitectura.presentation.ui.main.game.model.ItemRouletteType" />
     </data>
 
@@ -92,13 +93,13 @@
                 android:id="@+id/correctQuestionsContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/dimen_5"
+                android:layout_marginVertical="@dimen/dimen_10"
                 android:orientation="horizontal">
 
                 <TextView
                     style="@style/gameBodyStyle"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:fontFamily="@font/alfa"
                     android:text="@string/results_correct_questions"
@@ -108,7 +109,7 @@
                     android:id="@+id/correctQuestions"
                     style="@style/gameBodyStyle"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center_vertical"
                     android:text="@{Long.toString(viewModel.result.allCorrectAnswers.size)}"
@@ -119,12 +120,13 @@
                 android:id="@+id/answersAverageContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginVertical="@dimen/dimen_10"
                 android:orientation="horizontal">
 
                 <TextView
                     style="@style/gameBodyStyle"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:fontFamily="@font/alfa"
                     android:text="@string/results_time_average"
@@ -145,12 +147,13 @@
                 android:id="@+id/experienceContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginVertical="@dimen/dimen_10"
                 android:orientation="horizontal">
 
                 <TextView
                     style="@style/gameBodyStyle"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:fontFamily="@font/alfa"
                     android:text="@string/results_experience"
@@ -171,6 +174,7 @@
                 android:id="@+id/pointsContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginVertical="@dimen/dimen_10"
                 android:orientation="horizontal">
 
                 <TextView
@@ -186,17 +190,20 @@
                     android:id="@+id/points"
                     style="@style/gameBodyStyle"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center_vertical"
                     android:text="@{@string/results_points_value(viewModel.result.rankingPoints, Math.max(viewModel.result.rankingPoints, 0))}"
                     android:textSize="@dimen/text_20" />
             </LinearLayout>
+
             <LinearLayout
                 android:id="@+id/rewardContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_marginVertical="@dimen/dimen_10"
+                android:orientation="horizontal"
+                app:isVisible="@{viewModel.regard != null}">
 
                 <TextView
                     style="@style/gameBodyStyle"
@@ -211,14 +218,28 @@
                     android:id="@+id/reward"
                     style="@style/gameBodyStyle"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center_vertical"
                     android:text="@{viewModel.regard.first == ItemRouletteType.EXP ? @string/roulette_item_exp(viewModel.regard.second) : @string/roulette_item_points(viewModel.regard.second)}"
                     android:textSize="@dimen/text_20" />
             </LinearLayout>
-        </LinearLayout>
 
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/repeatGameBtn"
+                style="@style/gameBodyStyle"
+                android:layout_width="@dimen/dimen_300"
+                android:layout_height="@dimen/dimen_40"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/dimen_20"
+                android:background="@drawable/spin_btn_background"
+                android:backgroundTint="@null"
+                android:gravity="center"
+                android:stateListAnimator="@xml/button_pressed"
+                android:text="Repetir preguntas erroneas"
+                android:textColor="@color/white" />
+
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
