--- a/app/src/main/res/navigation/main.xml
+++ b/app/src/main/res/navigation/main.xml
@@ -17,12 +17,12 @@
     <action
         android:id="@+id/action_main_to_homeFragment"
         app:destination="@id/homeFragment"
-        app:popUpTo="@id/homeFragment"
-        app:popUpToInclusive="true"
         app:enterAnim="@anim/enter_from_right"
         app:exitAnim="@anim/exit_to_left"
         app:popEnterAnim="@anim/enter_from_left"
-        app:popExitAnim="@anim/exit_to_right"/>
+        app:popExitAnim="@anim/exit_to_right"
+        app:popUpTo="@id/main"
+        app:popUpToInclusive="true" />
 
     <fragment
         android:id="@+id/homeFragment"
@@ -77,6 +77,14 @@
             android:name="navType"
             android:defaultValue="GAME_MODE"
             app:argType="com.etsisi.appquitectura.domain.enums.GameNavType" />
+        <argument
+            android:name="gameMode"
+            app:argType="com.etsisi.appquitectura.presentation.ui.main.game.model.ItemGameModeAction" />
+        <argument
+            android:name="lastScore"
+            app:argType="com.etsisi.appquitectura.domain.model.UserGameScoreBO"
+            app:nullable="true"
+            android:defaultValue="@null" />
         <action
             android:id="@+id/action_gameMode_to_play"
             app:destination="@id/playFragment"
@@ -91,27 +99,24 @@
                 android:defaultValue="PRE_START_GAME"
                 app:argType="com.etsisi.appquitectura.domain.enums.GameNavType" />
         </action>
-        <argument
-            android:name="gameMode"
-            app:argType="com.etsisi.appquitectura.presentation.ui.main.game.model.ItemGameModeAction" />
         <action
             android:id="@+id/open_navigationDialog"
             app:destination="@id/navigationDialog" />
         <action
             android:id="@+id/action_playFragment_to_resultFragment"
             app:destination="@id/resultFragment"
-            app:popUpTo="@id/homeFragment"
-            app:popUpToSaveState="false"
             app:enterAnim="@anim/enter_from_right"
             app:exitAnim="@anim/exit_to_left"
             app:popEnterAnim="@anim/enter_from_left"
-            app:popExitAnim="@anim/exit_to_right" />
+            app:popExitAnim="@anim/exit_to_right"
+            app:popUpTo="@id/homeFragment"
+            app:popUpToSaveState="false" />
     </fragment>
     <dialog
         android:id="@+id/navigationDialog"
         android:name="com.etsisi.appquitectura.presentation.dialog.view.NavigationDialog"
         android:label="NavigationDialog"
-        tools:layout="@layout/dialog_navigation" >
+        tools:layout="@layout/dialog_navigation">
         <argument
             android:name="dialogType"
             app:argType="com.etsisi.appquitectura.presentation.dialog.enums.DialogType" />
@@ -127,10 +132,26 @@
         <argument
             android:name="userResult"
             app:argType="com.etsisi.appquitectura.domain.model.UserGameScoreBO" />
+        <action
+            android:id="@+id/action_repeat_incorrect_answers"
+            app:destination="@id/playFragment"
+            app:popUpTo="@id/homeFragment">
+            <argument
+                android:name="navType"
+                android:defaultValue="REPEAT_INCORRECT_ANSWERS"
+                app:argType="com.etsisi.appquitectura.domain.enums.GameNavType" />
+            <argument
+                android:name="gameMode"
+                android:defaultValue="TWENTY_QUESTIONS"
+                app:argType="com.etsisi.appquitectura.presentation.ui.main.game.model.ItemGameModeAction" />
+        </action>
+        <argument
+            android:name="isRepeatingMode"
+            app:argType="boolean" />
     </fragment>
     <fragment
         android:id="@+id/myProfileFragment"
         android:name="com.etsisi.appquitectura.presentation.ui.main.profile.view.MyProfileFragment"
         android:label="MyProfileFragment"
-        tools:layout="@layout/fragment_my_profile"/>
+        tools:layout="@layout/fragment_my_profile" />
 </navigation>
