--- a/app/src/main/res/navigation/main.xml
+++ b/app/src/main/res/navigation/main.xml
@@ -92,6 +92,11 @@
             app:argType="com.etsisi.appquitectura.domain.model.UserGameScoreBO"
             app:nullable="true"
             android:defaultValue="@null" />
+        <argument
+            android:name="quiestionTopics"
+            app:nullable="true"
+            android:defaultValue="@null"
+            app:argType="com.etsisi.appquitectura.presentation.ui.main.game.model.QuestionTopics" />
         <action
             android:id="@+id/action_gameMode_to_play"
             app:destination="@id/playFragment"
