Handle new game modes

--- a/app/src/main/res/layout/fragment_play.xml
+++ b/app/src/main/res/layout/fragment_play.xml
@@ -10,10 +10,6 @@
         <variable
             name="viewModel"
             type="com.etsisi.appquitectura.presentation.ui.main.game.viewmodel.PlayViewModel" />
-
-        <variable
-            name="listener"
-            type="com.etsisi.appquitectura.presentation.common.PlayFragmentListener" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -43,62 +39,22 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <HorizontalScrollView
-                android:id="@+id/labels_container"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:visibility="gone"
-                app:isVisible="@{viewModel.navType == GameNavType.GAME_MODE}"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/title">
-
-                <com.google.android.material.chip.ChipGroup
-                    android:id="@+id/labels"
-                    android:layout_width="match_parent"
-                    android:layout_height="?android:attr/actionBarSize"
-                    app:chipSpacingHorizontal="@dimen/dimen_4"
-                    app:singleLine="true"
-                    app:singleSelection="false" />
-
-            </HorizontalScrollView>
-
-            <include
-                android:id="@+id/include"
-                layout="@layout/item_game_mode"
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
-                android:clickable="true"
-                android:onClick="@{() -> listener.onGameMode(viewModel.gameModes.get(0))}"
-                app:gameMode="@{viewModel.gameModes.get(0)}"
-                app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal" />
-
-            <include
-                layout="@layout/item_game_mode"
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
-                android:clickable="true"
-                android:onClick="@{() -> listener.onGameMode(viewModel.gameModes.get(1))}"
-                app:gameMode="@{viewModel.gameModes.get(1)}"
-                app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal" />
-
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guideline_vertical"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/gameModesRv"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:clipChildren="false"
+                android:clipToPadding="false"
+                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
+                android:layoutAnimation="@anim/layout_animation_fall_down"
                 android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.5" />
+                android:paddingVertical="@dimen/dimen_20"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/title"
+                app:spanCount="2" />
 
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guideline_horizontal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.5" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <com.airbnb.lottie.LottieAnimationView
