--- a/app/src/main/res/navigation/main.xml
+++ b/app/src/main/res/navigation/main.xml
@@ -44,12 +44,7 @@
             app:popEnterAnim="@anim/enter_from_left"
             app:popExitAnim="@anim/exit_to_right"
             app:popUpTo="@id/homeFragment"
-            app:restoreState="false">
-            <argument
-                android:name="gameMode"
-                android:defaultValue="NONE"
-                app:argType="com.etsisi.appquitectura.presentation.ui.main.game.model.ItemGameModeAction" />
-        </action>
+            app:restoreState="false"/>
         <action
             android:id="@+id/action_home_to_myProfile"
             app:destination="@id/myProfileFragment"
@@ -85,18 +80,14 @@
             android:defaultValue="GAME_MODE"
             app:argType="com.etsisi.appquitectura.domain.enums.GameNavType" />
         <argument
-            android:name="gameMode"
-            app:argType="com.etsisi.appquitectura.presentation.ui.main.game.model.ItemGameModeAction" />
+            android:name="gameModeIndex"
+            app:argType="integer"
+            android:defaultValue="-1" />
         <argument
             android:name="lastScore"
             app:argType="com.etsisi.appquitectura.domain.model.UserGameScoreBO"
             app:nullable="true"
             android:defaultValue="@null" />
-        <argument
-            android:name="quiestionTopics"
-            app:nullable="true"
-            android:defaultValue="@null"
-            app:argType="com.etsisi.appquitectura.presentation.ui.main.game.model.QuestionTopics" />
         <action
             android:id="@+id/action_gameMode_to_play"
             app:destination="@id/playFragment"
@@ -152,10 +143,6 @@
                 android:name="navType"
                 android:defaultValue="REPEAT_INCORRECT_ANSWERS"
                 app:argType="com.etsisi.appquitectura.domain.enums.GameNavType" />
-            <argument
-                android:name="gameMode"
-                android:defaultValue="TWENTY_QUESTIONS"
-                app:argType="com.etsisi.appquitectura.presentation.ui.main.game.model.ItemGameModeAction" />
         </action>
         <argument
             android:name="isRepeatingMode"
