--- a/app/src/main/res/layout/item_game_mode.xml
+++ b/app/src/main/res/layout/item_game_mode.xml
@@ -14,11 +14,13 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingHorizontal="@dimen/dimen_5"
+            android:paddingVertical="@dimen/dimen_10"
             android:clickable="true"
             android:focusable="true"
             android:onClick="@{() -> listener.onClicked(gameMode)}">
