--- a/app/src/main/res/navigation/main.xml
+++ b/app/src/main/res/navigation/main.xml
@@ -88,6 +88,11 @@
             app:argType="com.etsisi.appquitectura.domain.model.UserGameScoreBO"
             app:nullable="true"
             android:defaultValue="@null" />
+        <argument
+            android:name="topicsIdSelected"
+            app:argType="integer[]"
+            app:nullable="true"
+            android:defaultValue="@null" />
         <action
             android:id="@+id/action_gameMode_to_play"
             app:destination="@id/playFragment"
