--- a/app/src/main/res/layout/dialog_picker_topic.xml
+++ b/app/src/main/res/layout/dialog_picker_topic.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:id="@+id/bottom_sheet_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -16,27 +15,21 @@
         <TextView
             android:id="@+id/bottom_sheet_title"
             style="@style/dialog_title"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dimen_24"
-            android:text="@string/dialog_topic_picker_title"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.06999999" />
+            android:text="@string/dialog_topic_picker_title" />
 
         <ScrollView
-            android:layout_width="@dimen/dimen_0"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_title">
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
 
             <com.google.android.material.chip.ChipGroup
                 android:id="@+id/labels"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layoutAnimation="@anim/layout_animation_fall_down"
                 app:chipSpacingHorizontal="@dimen/dimen_4"
                 app:singleSelection="false" />
         </ScrollView>
@@ -44,9 +37,6 @@
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/start_game"
             style="@style/buttonStyle"
-            android:text="Empezar partida"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:text="Empezar partida" />
+    </LinearLayout>
 </layout>
